<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ajout d'une visite"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <EditText
        android:id="@+id/date"
        tools:inputType="text|textPersonName|number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addVdate"
        android:inputType="text"
        android:shadowColor="@android:color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5" />

    <EditText
        android:id="@+id/bilan"
        tools:inputType="text|textPersonName|number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addVbilan"
        android:inputType="text"
        android:shadowColor="@android:color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5" />

    <EditText
        android:id="@+id/motif"
        tools:inputType="text|textPersonName|number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addVmotif"
        android:inputType="text"
        android:shadowColor="@android:color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5" />

    <EditText
        android:id="@+id/vis"
        tools:inputType="text|textPersonName|number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addVvisiteur"
        android:inputType="text"
        android:shadowColor="@android:color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5" />

    <EditText
        android:id="@+id/indConf"
        tools:inputType="text|textPersonName|number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addVindConf"
        android:inputType="text"
        android:shadowColor="@android:color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.02">

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="41dp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_weight="0.02"
            android:elevation="0dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/quitter"
            android:layout_width="200dp"
            android:layout_height="39dp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_weight="0.02"
            android:text="@string/quit" />
    </GridLayout>

</LinearLayout>